Se agregaron las opciones para cerrar sesión

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -644,6 +644,9 @@ video {
 .font-bold {
   font-weight: 700;
 }
+.font-normal {
+  font-weight: 400;
+}
 .uppercase {
   text-transform: uppercase;
 }
