--- a/public/css/app.css
+++ b/public/css/app.css
@@ -576,6 +576,9 @@ video {
 .mt-5 {
   margin-top: 1.25rem;
 }
+.mb-4 {
+  margin-bottom: 1rem;
+}
 .block {
   display: block;
 }
@@ -749,6 +752,10 @@ video {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 .font-black {
   font-weight: 900;
