--- a/public/css/app.css
+++ b/public/css/app.css
@@ -606,6 +606,9 @@ video {
 .h-96 {
   height: 24rem;
 }
+.max-h-96 {
+  max-height: 24rem;
+}
 .w-5 {
   width: 1.25rem;
 }
@@ -644,6 +647,9 @@ video {
 }
 .gap-6 {
   gap: 1.5rem;
+}
+.overflow-y-scroll {
+  overflow-y: scroll;
 }
 .rounded {
   border-radius: 0.25rem;
