Se implementó la funcionalidad de mostrar enlace para editar perfil si el usuario está autentificado

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -875,6 +875,10 @@ video {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
+.hover\:text-gray-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
 .focus\:z-10:focus {
   z-index: 10;
 }
